yaml/moodle-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: moodle-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: moodle
    spec:
      nodeSelector:
        node: "web"
      containers:
      - name: moodle-con
        image: rmamchur/apache:2
        readinessProbe:
          periodSeconds: 10
          httpGet:
            path: /ready.html
            port: 80
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: moodle-pvc 
          mountPath: /var/www
        resources:
          requests:
            cpu: 70m
          limits:
            cpu: 80m
      volumes:
      - name: moodle-pvc 
        persistentVolumeClaim:
          claimName: moodle-pvc
