yaml/wp-deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: wp-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: wp
    spec:
      nodeSelector:
        node: "web"
      containers:
      - name: wp-con
        image: rmamchur/apache:2
        readinessProbe:
          periodSeconds: 10
          httpGet:
            path: /readme.html
            port: 80
        ports:
        - name: http
          containerPort: 80
        volumeMounts:
        - name: wp-pvc 
          mountPath: /var/www/html
        - name: wp-conf
          mountPath: /var/www/html/wp-config.php
          subPath: wp-config.php
        resources:
          requests:
            cpu: 200m
      volumes:
      - name: wp-pvc 
        persistentVolumeClaim:
          claimName: wp-pvc 
      - name: wp-conf
        secret:
          secretName: wp-conf
