yaml/wp-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-svc-loadbalancer
spec:
  type: LoadBalancer
  sessionAffinity: ClientIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: wp
